# stm32f103-hal

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.txt
include/: hal.h  stm32f1xx_hal_conf.h  stm32f1xx_hal_flash.h  stm32f1xx_hal_flash_ex.h
src/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_flash.c  stm32f1xx_hal_flash_ex.c  stm32f1xx_hal_uart.c
